Fix alignment in user statistics

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -2322,6 +2322,19 @@ body footer .container .right li a:hover {
     margin-top: 0;
   }
 }
+@media (min-width: 992px) {
+	body main section.campaigninfo > .container {
+		display: flex;
+		.left > .wrap {
+			height: 100%;
+			display: flex;
+			align-items: stretch;
+			.userstat {
+				height: 100%;
+			}
+		}
+	}
+}
 /* Medium devices (tablet portrait, 767px) */
 @media (max-width: 768px) {
   body header .wrap .container {
